Add header styling

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 
 * {
     box-sizing: border-box;
+    overflow: hidden; /*TEMP*/
 }
 
 html {
@@ -25,6 +26,16 @@ body {
     color: var(--main-text-color);
 }
 
+h1 {
+    font-size: 3rem;
+    font-weight: bolder;
+}
+
+a, a:visited {
+    text-decoration: none;
+    color: var(--secondary-text-color);
+}
+
 .wrapper {
     max-width: 1000px;
     margin: 0 auto;
@@ -32,4 +43,35 @@ body {
 
     display: flex;
     flex-direction: column;
+}
+
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px 0;
+    justify-content: space-between;
+}
+
+.header__logo {
+    font-size: 1.5rem;
+}
+
+.header__list {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header__link {
+    font-size: 1.125rem;
+}
+
+.hero-section__description {
+    font-size: 1.125rem;
+    color: var(--secondary-text-color);
 }
