--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 * {
     box-sizing: border-box;
-    overflow: hidden; /*TEMP*/
+    overflow-x: hidden; /*TEMP*/
 }
 
 html {
@@ -29,6 +29,8 @@ body {
 h1 {
     font-size: 3rem;
     font-weight: bolder;
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 a, a:visited {
@@ -71,7 +73,46 @@ a, a:visited {
     font-size: 1.125rem;
 }
 
+.hero-section {
+    flex: 1 1 450px;
+    display: flex;
+    /*flex-wrap: wrap;*/
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 50px;
+}
+
+.hero-section__menu-wrapper {
+    flex: 0 1 445px;
+    min-width: 320px;
+}
+
 .hero-section__description {
     font-size: 1.125rem;
     color: var(--secondary-text-color);
 }
+
+.hero-section__image {
+    flex: 0 0 520px;
+    height: 240px;
+    object-fit: cover;
+}
+
+.button {
+    margin: 0;
+    padding: 8px 16px;
+    min-width: 130px;
+    font-size: 1.125rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    background-color: var(--accent-color);
+    color: var(--main-text-color);
+    cursor: pointer;
+}
+
+.button:hover, .button:active {
+    background-color: #2b77ee;
+}
+
+
