--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,11 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-    background-color: var(--background-color);
-    color: var(--main-text-color);
+}
+
+header, section, footer {
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -38,13 +41,14 @@ a, a:visited {
     color: var(--secondary-text-color);
 }
 
-.wrapper {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 10px;
+.page-width-wrap {
+    background-color: var(--background-color);
+    color: var(--main-text-color);
+}
 
-    display: flex;
-    flex-direction: column;
+.page-width-wrap--white {
+    background-color: #fff;
+    color: var(--alternate-text-color);
 }
 
 .header {
@@ -74,7 +78,7 @@ a, a:visited {
 }
 
 .hero-section {
-    flex: 1 1 450px;
+    min-height: 450px;
     display: flex;
     /*flex-wrap: wrap;*/
     justify-content: space-between;
@@ -115,4 +119,7 @@ a, a:visited {
     background-color: #2b77ee;
 }
 
-
+img {
+    width: 100px;
+    height: 100px;
+}
