--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,41 @@ a, a:visited {
     background-color: #2b77ee;
 }
 
-img {
-    width: 100px;
-    height: 100px;
+.image-set-section {
+    min-height: 500px;
+    padding-top: 55px;
+}
+
+.image-set-section__header {
+    margin-top: 0;
+    margin-bottom: 55px;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 2.25rem;
+}
+
+.image-set {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    justify-content: center;
+}
+
+.image-set__item {
+    flex: 0 0 168px;
+}
+
+.image-set__image {
+    width: 168px;
+    height: 168px;
+    margin-bottom: 12px;
+    border: 4px solid var(--accent-color);
+    border-radius: 16px;
+    object-fit: cover;
+}
+
+.image-set__description {
+    margin-top: 0;
+    padding: 0 4px;
+    text-align: center;
 }
